--- a/assets/projects/webschool/admin/index.html
+++ b/assets/projects/webschool/admin/index.html
@@ -19,7 +19,7 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-'                            <a class="dropdown-item" href="../index.html">Sair</a>
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                             <!-- <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a> -->
