--- a/assets/projects/webschool/admin/turmas.html
+++ b/assets/projects/webschool/admin/turmas.html
@@ -29,11 +29,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
@@ -43,7 +48,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Cadastro de Turmas</strong> <p/>
-                <form action="/webschool/admin/turma" method="post" role="form" class="form-horizontal " >
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="serie" class="col-form-label col-md-2 col-form-label-sm ">Série:</label>
                         <div class="col-md-3">
