--- a/assets/projects/webschool/admin/alunos.html
+++ b/assets/projects/webschool/admin/alunos.html
@@ -2,9 +2,11 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">        
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
         <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/status.css" rel="stylesheet">
         <link href="../includes/css/navbar.css" rel="stylesheet">
         <link href="../includes/css/datatables.css" rel="stylesheet">
         <script src="../includes/js/jquery.js"></script>
@@ -22,6 +24,9 @@
         
         $(document).ready( function () {
             $('#tableAlunos').DataTable({
+                "columnDefs": [
+                    { orderable: false, targets: 3 }
+                ],
                 "paging": true,
                 "language": {
                     "url": "https://cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"
@@ -42,11 +47,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
@@ -79,7 +89,7 @@
                     <div class="form-group row justify-content-center ">
                         <label for="turma" class="col-form-label col-md-2 col-form-label-sm ">Turma:</label>
                         <div class="col-md-3">
-                            <select name="turma" class="form-control form-control-sm ">
+                            <select name="turma" class="form-control form-control-sm selectpicker" title="Selecione uma turma">
                                 <option value='2'>1 º Série </option>
                                 <option value='3'>2 º Série </option>
                                 <option value='4'>3 º Série </option>
@@ -91,83 +101,36 @@
 
                 <p><strong>Lista de Alunos</strong></p>
 
-                <table style="margin-left: auto; margin-right: auto; font-size: 13; width: auto !important;" class="table hover" id="tableAlunos">
+                <table style="width: 100%; font-size: 13px;" class="table hover" id="tableAlunos">
                     <thead>
-                        <tr><td>Nome</td><td>Turma</td><td>Status</td><td>Editar</td><td>Remover</td></tr>
+                    <tr><td>Nome</td><td style="width: 20%">Turma</td><td style="width: 15%;"></td><td style="width: 15%; text-align: center;"></td></tr>
                     </thead>
                     <tbody>
-                        <tr id='row-1'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-2'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='2'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-3'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='3'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-4'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='4'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-5'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='5'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-6'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='6'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-7'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='7'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-8'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='8'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-9'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='9'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-10'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='10'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-11'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='11'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
-                        <tr id='row-12'>
-                            <td>Aluno </td>
-                            <td> na 1º Série </td>
-                            <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='aluno.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                            <td><button class='btn btn-danger btn-sm' id='deletar' value='12'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td>
-                        </tr>
+                    <tr id='row-10'><td>Ana Julia </td>
+                        <td>1º Série </td>
+                        <td><span class='label-status_10 label-success'>Ativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='10'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr><tr id='row-12'><td>Ernesto Augusto </td>
+                        <td>2º Série </td>
+                        <td><span class='label-status_12 label-danger'>Inativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='12'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr><tr id='row-8'><td>Fabio Montanha </td>
+                        <td>2º Série </td>
+                        <td><span class='label-status_8 label-success'>Ativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='8'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr><tr id='row-14'><td>Fabricio Alves </td>
+                        <td>2º Série </td>
+                        <td><span class='label-status_14 label-success'>Ativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='14'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr><tr id='row-11'><td>Francisco Evandro </td>
+                        <td>2º Série </td>
+                        <td><span class='label-status_11 label-danger'>Inativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='11'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr><tr id='row-13'><td>Maria Juliana </td>
+                        <td>1º Série </td>
+                        <td><span class='label-status_13 label-danger'>Inativo</span></td>
+                        <td style='text-align: center;'><a href='aluno.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='13'><span class='glyphicon glyphicon-ban-circle'></span> </a></td></tr>
                     </tbody>
                 </table>
 
@@ -178,7 +141,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>		
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
         <script type="application/json" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     </body>
 </html>
 	
