--- a/assets/projects/webschool/admin/professor.html
+++ b/assets/projects/webschool/admin/professor.html
@@ -2,6 +2,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="../includes/css/glyphicons.css" rel="stylesheet">
         <link href="../includes/css/navbar.css" rel="stylesheet">
@@ -21,11 +22,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
@@ -59,11 +65,59 @@
                     </div>
                     <a href="professores.html" type="submit" id="btn" class="btn btn-success btn-sm"><span class='glyphicon glyphicon-refresh'></span> Atualizar</a>
                 </form>
+
+                <strong>Disciplinas por Turma deste Professor</strong><p/>
+
+                <form action="" method="post" role="form" class="form-horizontal " >
+
+                    <input type="hidden" name="professor" value="1">
+                    <input type="hidden" name="id" value="2">
+
+                    <div class="form-group row justify-content-center ">
+                        <label for="disciplina" class="col-form-label col-md-2 col-form-label-sm">Disciplina:</label>
+                        <div class="col-md-3" >
+                            <select name="disciplina" class="form-control form-control-sm selectpicker" title="Selecione uma disciplina">
+                                <option value='1'>Matematica</option><option value='2'>Portugues</option><option value='3'>Geografia</option><option value='4'>Historia</option><option value='5'>Ed Fisica</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row justify-content-center ">
+                        <label for="turma" class="col-form-label col-md-2 col-form-label-sm">Turma:</label>
+                        <div class="col-md-3">
+                            <select name="turma" class="form-control form-control-sm selectpicker" title="Selecione uma turma">
+                                <option value='2'>2 º Série </option><option value='1'>3 º Série A</option>
+                            </select>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</button><br/>
+                </form>
+
+                <table style="margin-left: auto; margin-right: auto; font-size: 13px; width: auto !important;" class="table">
+                    <tbody>
+
+                    <tr id='row-dpp-11'>
+                        <td>2º Série </td><td>Geografia</td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar-dpp' value='11'><span class='glyphicon glyphicon-trash'></span> Deletar</button></td></tr>
+
+                    <tr id='row-dpp-12'>
+                        <td>2º Série </td><td>Historia</td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar-dpp' value='12'><span class='glyphicon glyphicon-trash'></span> Deletar</button></td></tr>
+
+                    <tr id='row-dpp-10'>
+                        <td>3º Série A</td><td>Portugues</td>
+                        <td><button class='btn btn-danger btn-sm' id='deletar-dpp' value='10'><span class='glyphicon glyphicon-trash'></span> Deletar</button></td></tr>
+
+                    </tbody>
+                </table>
             </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>	
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+        <script type="application/json" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     </body>
 </html>
