--- a/assets/projects/webschool/admin/responsaveis.html
+++ b/assets/projects/webschool/admin/responsaveis.html
@@ -3,8 +3,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta charset="UTF8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">        
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
         <link href="../includes/css/glyphicons.css" rel="stylesheet">
+        <link href="../includes/css/status.css" rel="stylesheet">
         <link href="../includes/css/navbar.css" rel="stylesheet">
         <link href="../includes/css/datatables.css" rel="stylesheet">
         <script src="../includes/js/jquery.js"></script>
@@ -22,6 +23,9 @@
         
         $(document).ready( function () {
             $('#tableResponsaveis').DataTable({
+                "columnDefs": [
+                    { orderable: false, targets: 2 }
+                ],
                 "paging": true,
                 "language": {
                     "url": "https://cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"
@@ -42,11 +46,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
@@ -80,18 +89,21 @@
 
                 <p><strong>Lista de Responsaveis</strong></p>
 
-                
-                <table style="margin-left: auto; margin-right: auto; font-size: 13; width: auto !important;" class="table hover" id="tableResponsaveis">
+                <div class="alert alert-danger" role="alert" style="display: none;">
+                </div>
+
+                <table style="margin: 0 auto; width: 100%; font-size: 13px;" class="table hover" id="tableResponsaveis">
                     <thead>
-                        <tr><td>Nome</td><td>Status</td><td>Editar</td><td>Remover</td></tr>
+                    <tr><td>Nome</td><td style="width: 15%"></td><td style="width: 15%; text-align: center;"></td></tr>
                     </thead>
                     <tbody>
-                        <tr id='row-1'><td>Responsavel 1 </td>
-                        <td><span class='glyphicon glyphicon-remove'></span> </td><td><a href='responsavel.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                        <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
-                        <tr id='row-2'><td>Responsavel 2 </td>
-                        <td><span class='glyphicon glyphicon-ok'></span> </td><td><a href='responsavel.html' class='btn btn-info btn-sm btn-sm'><span class='glyphicon glyphicon-edit'></span> Editar</a> </td>
-                        <td><button class='btn btn-danger btn-sm' id='deletar' value='2'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
+                    <tr id='row-15'><td>Jose Alves </td>
+                        <td><span class='label-status_15 label-success'>Ativo</span></td><td style='text-align: center;'><a href='responsavel.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='15' ><span class='glyphicon glyphicon-ban-circle'></span></a></td></tr><tr id='row-16'><td>Maria Fernandes </td>
+                        <td><span class='label-status_16 label-success'>Ativo</span></td><td style='text-align: center;'><a href='responsavel.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='16' ><span class='glyphicon glyphicon-ban-circle'></span></a></td></tr><tr id='row-17'><td>Vitor Fagundes </td>
+                        <td><span class='label-status_17 label-danger'>Inativo</span></td><td style='text-align: center;'><a href='responsavel.html' class='btn'><span class='glyphicon glyphicon-edit'></span></a>
+                            <a href='#' class='btn desativar' id='17' ><span class='glyphicon glyphicon-ban-circle'></span></a></td></tr>
                     </tbody>
                 </table>
 
@@ -100,8 +112,9 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>		
-        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
         <script type="application/json" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.10.20/i18n/Portuguese-Brasil.json"></script>
     </body>
 </html>
