--- a/assets/projects/webschool/admin/responsavel.html
+++ b/assets/projects/webschool/admin/responsavel.html
@@ -32,11 +32,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
@@ -79,7 +84,7 @@
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3" >
-                            <select name="aluno" class="form-control form-control-sm">
+                            <select name="aluno" class="form-control form-control-sm select-picker"/>
                                 <option value='970'>Aluno ( na 1º Série )</option>
                                 <option value='970'>Aluno ( na 3º Série )</option>
                                 <option value='970'>Aluno ( na 2º Série )</option>
@@ -91,9 +96,6 @@
                 </form>
 
                 <table style="margin-left: auto; margin-right: auto; font-size: 13; width: auto !important;" class="table">
-                    <thead>
-                        <tr><td>Nome</td><td>Turma</td><td>Remover</td></tr>
-                    </thead>
                     <tbody>
                         <tr id='row-1'><td>Aluno</td><td> na 1º Série </td>
                         <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
