--- a/assets/projects/webschool/admin/turma.html
+++ b/assets/projects/webschool/admin/turma.html
@@ -18,11 +18,16 @@
                             Logado como admin
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="../index.html">Sair</a>
-                            <!-- <a class="dropdown-item" href="#">Another action</a>
+
+                            <a class='dropdown-item' href='index.html'>Home</a>
+                            <a class='dropdown-item' href='turmas.html'>Turmas</a>
+                            <a class='dropdown-item' href='disciplinas.html'>Disciplinas</a>
+                            <a class='dropdown-item' href='professores.html'>Professores</a>
+                            <a class='dropdown-item' href='alunos.html'>Alunos</a>
+                            <a class='dropdown-item' href='responsaveis.html'>Responsáveis</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a> -->
+                            <a class="dropdown-item" href="../index.html">Sair</a>
                         </div>
                     </li>
                 </ul>
