--- a/assets/projects/webschool/index.html
+++ b/assets/projects/webschool/index.html
@@ -28,7 +28,7 @@
             <h3>Bem-vindo</h3>
 
             <div class="login">
-                <form action="login" id="login" method="POST" class="form-signin">
+                <form action="" id="login" method="POST" class="form-signin">
                     <input type="text" name="email" placeholder="Digite seu login" class="form-control" >
                     <input type="password" name="password" placeholder="Digite sua senha" class="form-control" >
                         <select name="tipo" id="tipo" class="form-control" required>
