removed hidden and action

--- a/assets/projects/webschool/index.html
+++ b/assets/projects/webschool/index.html
@@ -15,7 +15,7 @@
                 })
 
                 $('#confirmBtn').click(function () {
-                    location.href = $('#tipo').val()
+                    //location.href = $('#tipo').val()
                 })
             });
         </script>
