--- a/assets/projects/webschool/admin/aluno.html
+++ b/assets/projects/webschool/admin/aluno.html
@@ -63,7 +63,7 @@
                     <div class="form-group row justify-content-center ">
                         <label for="turma" class="col-form-label col-md-2 col-form-label-sm ">Turma:</label>
                         <div class="col-md-3">
-                            <select name="turma" class="form-control form-control-sm selectpicker">
+                            <select name="turma" class="form-control form-control-sm selectpicker" title="Selecione uma turma">
                                 <option value='2'>1 º Série </option>
                                 <option value='3'>2 º Série </option>
                                 <option value='4'>3 º Série </option>
